test/src/e2e_vm_tests/test_programs/should_fail/method_type_args_sound/src/main.sw
contract;

struct A {}

impl A {
    fn generic<T>(self, x: T) -> T { x }
}

fn foo() -> bool {
    A {}.generic::<u8>(true)
}
